Fix search icon alignment

--- a/css/elements.css
+++ b/css/elements.css
@@ -99,7 +99,7 @@ form.uk-navbar-search {
 
 form.uk-navbar-search i {
     font-size: 15px;
-    margin: 23px 0 9px 13px;
+    margin: 28px 0 9px 13px;
     position: absolute;
     z-index: 1;
 }
